<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/snapshot"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:contentDescription="@string/default_image_description"
        android:background="@color/black"
        android:src="@drawable/hanzawa_naoki"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="18sp"
            android:text="@string/hello_world"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginStart="@dimen/item_margin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/item_margin"
            android:layout_marginEnd="@dimen/item_margin"
            android:layout_marginRight="@dimen/item_margin">
            <ImageView
                android:layout_width="12sp"
                android:layout_height="12sp"
                android:src="@drawable/clock"
                android:scaleType="fitCenter"
                android:contentDescription="@string/post_time"
                android:background="@color/alpha0"
                android:layout_gravity="bottom|start"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_marginEnd="@dimen/item_margin"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginStart="@dimen/item_margin"/>
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="15sp"
                android:lineSpacingExtra="0dp"
                android:layout_gravity="bottom|start"
                android:includeFontPadding="false"
                android:drawablePadding="0dp"
                android:text="@string/example_time"
                android:padding="0dp"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:layout_marginBottom="@dimen/item_margin">
        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorRate"
            android:text="@string/example_rate"
            android:textSize="20sp"
            android:gravity="bottom|end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/point"
            android:gravity="bottom|end"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginStart="@dimen/item_margin"
            android:layout_marginEnd="@dimen/item_margin"/>
    </LinearLayout>
</LinearLayout>
