<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/video_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/hello_world"
        android:maxLines="1"
        android:ellipsize="end"/>
    <FrameLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <io.vov.vitamio.widget.CenterLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">
            <io.vov.vitamio.widget.VideoView
                android:id="@+id/video_surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </io.vov.vitamio.widget.CenterLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/popular_rate"
                />
            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/popular_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:rating="3"
                android:stepSize="1"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:focusable="false"
                app:mrb_progressTint="@color/colorRate"
                app:mrb_secondaryProgressTint="@color/colorRate"
                app:mrb_progressBackgroundTint="@color/colorRate"
                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/my_rate"/>
            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/my_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:rating="3"
                android:stepSize="1"
                app:mrb_progressTint="@color/colorRate"
                app:mrb_secondaryProgressTint="@color/colorRate"
                app:mrb_progressBackgroundTint="@color/colorRate"
                style="@style/Widget.MaterialRatingBar.RatingBar" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rate_submit_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_shape_light"
                android:textColor="@color/white"
                android:text="@string/cancel_rate"
                android:textSize="20sp"
                android:paddingLeft="32dp"
                android:paddingStart="32dp"
                android:paddingRight="32dp"
                android:paddingEnd="32dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:text="@string/submit_rate"
                android:textSize="20sp"
                android:paddingLeft="32dp"
                android:paddingStart="32dp"
                android:paddingRight="32dp"
                android:paddingEnd="32dp" />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/download"
        android:contentDescription="@string/default_image_description"
        android:layout_gravity="end"/>
    <Button
        android:id="@+id/comeback_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/back_to_homepage"
        android:background="@color/colorComeBack"/>
</LinearLayout>